feat(web): add categorized long-term AI chat memory
Store profile, preferences, weaknesses, and mistake patterns alongside dialog/context, inject L0/L1 memory into prompts, and surface richer greetings on the web AI chat page.

Co-authored-by: Cursor <cursoragent@cursor.com>